--- a/AUF.EMR.MVC/Views/PregnancyRecord/Index.cshtml
+++ b/AUF.EMR.MVC/Views/PregnancyRecord/Index.cshtml
@@ -7,21 +7,24 @@
 }
 
 <div class="container mx-auto px-4 py-8">
-    <div class="flex justify-between items-center mb-4">
-        <h1 class="text-2xl font-bold mb-8 text-gray-800">Pregnancy Records</h1>
-
-        <div class="flex justify-end space-x-2 mb-6">
-
-            <a asp-action="Create" asp-route-householdNo="@Model.HouseholdNo" class="text-white bg-primary-50 font-medium rounded-lg transition duration-300 ease-in-out text-sm px-4 py-2 hover:bg-green-300 flex-shrink-0 inline-block  text-white font-medium" aria-label="Add WRA">
-                <svg class="h-5 w-5 inline-block mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6"></path>
-                </svg>
-                Add Pregnancy Record
-            </a>
-        </div>
-    </div>
-
     <div class="bg-white shadow-md rounded-lg p-8">
+        <div class="flex justify-between items-center mb-4">
+            <div>
+                <h1 class="text-xl">List of</h1>
+                <h1 class="text-2xl font-bold text-gray-800 mb-4">Pregnancy Records</h1>
+            </div>
+
+            <div class="flex justify-end space-x-2 mb-6">
+
+                <a asp-action="Create" asp-route-householdNo="@Model.HouseholdNo" class="px-5 py-2.5 max-h-12 text-sm font-medium text-center inline-flex items-center text-white bg-primary-50 rounded-lg focus:ring-4 focus:outline-none focus:ring-green-200" aria-label="Add WRA">
+                    <svg class="w-6 h-6 text-white mr-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+                        <path fill-rule="evenodd" d="M5 4a2 2 0 0 0-2 2v1h10.968l-1.9-2.28A2 2 0 0 0 10.532 4H5ZM3 19V9h18v10a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2Zm9-8.5a1 1 0 0 1 1 1V13h1.5a1 1 0 1 1 0 2H13v1.5a1 1 0 1 1-2 0V15H9.5a1 1 0 1 1 0-2H11v-1.5a1 1 0 0 1 1-1Z" clip-rule="evenodd" />
+                    </svg>
+                    Add Pregnancy Record
+                </a>
+            </div>
+        </div>
+        <hr class="mb-4" />
         <div style="overflow:auto;">
             <table class="table-auto w-full text-sm">
                 <thead>
@@ -55,7 +58,7 @@
                 <tbody>
                     @foreach (var item in Model.PregnancyRecords)
                     {
-                            <tr class="text-sm hover-household transition duration-300 ease-in-out border-b border-gray-100 ">
+                        <tr class="text-sm hover-household transition duration-300 ease-in-out border-b border-gray-100 ">
                             <td class="px-4 py-2 text-left">
                                 @Html.DisplayFor(modelItem => item.Patient.FormattedFullName)
                             </td>
