--- a/AUF.EMR.MVC/Views/PregnancyTracking/Index.cshtml
+++ b/AUF.EMR.MVC/Views/PregnancyTracking/Index.cshtml
@@ -9,39 +9,34 @@
 <div class="container mx-auto px-4 py-8">
     <div class="bg-white shadow-md rounded-lg p-8 mb-6">
         <div class="flex justify-between items-center mb-4">
-            <h1 class="text-2xl font-bold mb-8">National Safe Motherhood Program - Pregnancy Tracking</h1>
+            <div>
+                <h1 class="text-xl">Details</h1>
+                <h1 class="text-2xl font-bold text-gray-800 mb-4">National Safe Motherhood Program</h1>
+            </div>
 
             <div class="flex justify-end space-x-2 mb-6">
-                <button type="button" onclick="print('Print', 'PregnancyTracking', @Model.HouseholdNo)" class="flex-shrink-0 inline-block bg-primary-50 text-white font-medium py-2 px-4 rounded-lg transition duration-300 ease-in-out text-sm w-24">
+                <button type="button" onclick="print('Print', 'PregnancyTracking', @Model.HouseholdNo)" class="flex-shrink-0 h-12 max-h-12 inline-block  bg-blue-500 hover:bg-blue-400 text-white font-medium py-2 px-4 rounded-lg transition duration-300 ease-in-out text-sm w-24">
                     <svg class="w-5 h-5 text-white inline-block mr-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
                         <path fill-rule="evenodd" d="M8 3a2 2 0 0 0-2 2v3h12V5a2 2 0 0 0-2-2H8Zm-3 7a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h1v-4a1 1 0 0 1 1-1h10a1 1 0 0 1 1 1v4h1a2 2 0 0 0 2-2v-5a2 2 0 0 0-2-2H5Zm4 11a1 1 0 0 1-1-1v-4h8v4a1 1 0 0 1-1 1H9Z" clip-rule="evenodd" />
                     </svg>
                     <span class="hidden md:inline font-medium">Print</span>
                 </button>
-
-                <a asp-action="Create" asp-route-householdNo="@Model.HouseholdNo" class="text-white bg-primary-50 font-medium rounded-lg transition duration-300 ease-in-out text-sm px-4 py-2 hover:bg-green-300 flex-shrink-0 inline-block  text-white font-medium" aria-label="Add WRA">
-                    <svg class="h-5 w-5 inline-block mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6"></path>
-                    </svg>
-                    Add Pregnancy Tracking
-                </a>
+                <div class="flex justify-end">
+                    <a asp-action="Edit" asp-controller="PregnancyTrackingHH" asp-route-id="@Model.PregnancyTrackingHH.Id" asp-route-householdNo="@Model.HouseholdNo" class="text-white h-12 max-h-12 bg-primary-50 mb-1 font-medium rounded-lg transition duration-300 ease-in-out text-sm px-4 py-2 hover:bg-blue-600 flex-shrink-0 inline-flex items-center space-x-2 text-white font-medium" aria-label="Add WRA">
+                        <svg class="w-6 h-6 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+                            <path fill-rule="evenodd" d="M11.32 6.176H5c-1.105 0-2 .949-2 2.118v10.588C3 20.052 3.895 21 5 21h11c1.105 0 2-.948 2-2.118v-7.75l-3.914 4.144A2.46 2.46 0 0 1 12.81 16l-2.681.568c-1.75.37-3.292-1.263-2.942-3.115l.536-2.839c.097-.512.335-.983.684-1.352l2.914-3.086Z" clip-rule="evenodd"></path>
+                            <path fill-rule="evenodd" d="M19.846 4.318a2.148 2.148 0 0 0-.437-.692 2.014 2.014 0 0 0-.654-.463 1.92 1.92 0 0 0-1.544 0 2.014 2.014 0 0 0-.654.463l-.546.578 2.852 3.02.546-.579a2.14 2.14 0 0 0 .437-.692 2.244 2.244 0 0 0 0-1.635ZM17.45 8.721 14.597 5.7 9.82 10.76a.54.54 0 0 0-.137.27l-.536 2.84c-.07.37.239.696.588.622l2.682-.567a.492.492 0 0 0 .255-.145l4.778-5.06Z" clip-rule="evenodd"></path>
+                        </svg><span>Update</span>
+                    </a>
+                </div>
             </div>
         </div>
 
         <div>
-            <div class="flex justify-between">
-                <h5 class="text-2xl font-bold mb-2">Information</h5>
-                <a asp-action="Edit" asp-controller="PregnancyTrackingHH" asp-route-id="@Model.PregnancyTrackingHH.Id" asp-route-householdNo="@Model.HouseholdNo" class="text-white bg-blue-500 mb-1 font-medium rounded-lg transition duration-300 ease-in-out text-sm px-4 py-2 hover:bg-blue-600 flex-shrink-0 inline-flex items-center space-x-2 text-white font-medium" aria-label="Add WRA">
-                    <svg class="w-6 h-6 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
-                        <path fill-rule="evenodd" d="M11.32 6.176H5c-1.105 0-2 .949-2 2.118v10.588C3 20.052 3.895 21 5 21h11c1.105 0 2-.948 2-2.118v-7.75l-3.914 4.144A2.46 2.46 0 0 1 12.81 16l-2.681.568c-1.75.37-3.292-1.263-2.942-3.115l.536-2.839c.097-.512.335-.983.684-1.352l2.914-3.086Z" clip-rule="evenodd"></path>
-                        <path fill-rule="evenodd" d="M19.846 4.318a2.148 2.148 0 0 0-.437-.692 2.014 2.014 0 0 0-.654-.463 1.92 1.92 0 0 0-1.544 0 2.014 2.014 0 0 0-.654.463l-.546.578 2.852 3.02.546-.579a2.14 2.14 0 0 0 .437-.692 2.244 2.244 0 0 0 0-1.635ZM17.45 8.721 14.597 5.7 9.82 10.76a.54.54 0 0 0-.137.27l-.536 2.84c-.07.37.239.696.588.622l2.682-.567a.492.492 0 0 0 .255-.145l4.778-5.06Z" clip-rule="evenodd"></path>
-                    </svg><span>Edit Info</span>
-                </a>
-            </div>
             <hr class="mb-2" />
             <dl class="grid grid-cols-1 md:grid-cols-2 gap-x-8 text-sm">
                 <div class="flex items-center pb-2">
-                    <dt class="text-gray-600 font-semibold mr-10 flex-shrink-0 w-40">Barangay</dt>
+                    <dt class="text-gray-800 font-semibold mr-10 flex-shrink-0 w-40">Barangay</dt>
                     <dd class="text-gray-900">@Model.PregnancyTrackingHH.Barangay</dd>
                 </div>
 
@@ -109,29 +104,20 @@
         </div>
     </div>
 
-    <div class="flex justify-between items-center mb-8">
-        <div class="flex-1 mr-4 relative">
-            <input type="text" class="w-full bg-white shadow-md rounded-lg p-3 pr-10 placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-green-200 border-none"
-                   placeholder="Search...">
-            <div class="absolute inset-y-0 right-0 flex items-center pr-3 pointer-events-none">
-                <svg class="h-5 w-5 text-gray-400" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24"
-                     stroke="currentColor">
-                    <path d="M21 21l-5.2-5.2m.8-.8a8 8 0 1 1-10.6-10.6 8 8 0 0 1 10.6 10.6z"></path>
-                </svg>
-            </div>
-        </div>
-
-        <!--Search Button-->
-        <button type="submit" class="inline-flex items-center py-3 px-3 ms-2 text-sm font-medium text-white bg-blue-500 rounded-lg border border-blue-500 hover:bg-blue-700 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800 transition duration-300 ease-in-out">
-            <svg class="w-4 h-4 me-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
-                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z" />
-            </svg>
-            Search
-        </button>
-    </div>
-
-
     <div class="bg-white shadow-md rounded-lg p-8">
+        <div class="flex justify-between mb-4">
+            <div>
+                <h1 class="text-xl">List of</h1>
+                <h1 class="text-2xl font-bold text-gray-800 mb-4">Pregnancy Tracking</h1>
+            </div>
+            <a asp-action="Create" asp-route-householdNo="@Model.HouseholdNo" class="px-5 py-2.5 max-h-12 text-sm font-medium text-center inline-flex items-center text-white bg-primary-50 rounded-lg focus:ring-4 focus:outline-none focus:ring-green-200" aria-label="Add WRA">
+                <svg class="w-6 h-6 text-white mr-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+                    <path fill-rule="evenodd" d="M5 4a2 2 0 0 0-2 2v1h10.968l-1.9-2.28A2 2 0 0 0 10.532 4H5ZM3 19V9h18v10a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2Zm9-8.5a1 1 0 0 1 1 1V13h1.5a1 1 0 1 1 0 2H13v1.5a1 1 0 1 1-2 0V15H9.5a1 1 0 1 1 0-2H11v-1.5a1 1 0 0 1 1-1Z" clip-rule="evenodd" />
+                </svg>
+                Add Pregnancy Tracking
+            </a>
+        </div>
+        <hr class="mb-4" />
         <div class="overflow-x-auto">
             <table class="table-auto w-full">
                 <thead>
