Implement checkup summary (without design)

--- a/AUF.EMR.MVC/Views/Dashboard/Household.cshtml
+++ b/AUF.EMR.MVC/Views/Dashboard/Household.cshtml
@@ -10,8 +10,8 @@
     <div class="mx-4">
         <div class="grid grid-cols-12 gap-6">
             <div class="col-span-12">
-                <h2 class="text-3xl font-bold">Welcome, User!</h2> <!--Fetch username here-->
-                <h2 class="text-1xl font-normal">Here’s the overview of your patients today.</h2>
+                <h2 class="text-3xl font-bold">Welcome to Household Dashboard</h2> <!--Fetch username here-->
+                <h2 class="text-1xl font-normal">Here’s the overview of Household #: @Model.HouseholdNo</h2>
             </div>
             <div class="col-span-12">
                 <div class="col-span-12 mt-2 flex flex-col lg:flex-row gap-2">
