--- a/AUF.EMR.MVC/Views/Shared/Navigations/_FormSideBar.cshtml
+++ b/AUF.EMR.MVC/Views/Shared/Navigations/_FormSideBar.cshtml
@@ -54,7 +54,7 @@
                 </a>
             </li>
             <li>
-                <a href="#" class="nav-link @(controller.Equals("Summary") && action.Equals("Index") ? "active" : "") flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100 group">
+                <a asp-action="Index" asp-controller="Summary" asp-route-householdNo="@Model" class="nav-link @(controller.Equals("Summary") && action.Equals("Index") ? "active" : "") flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100 group">
                     <svg class="w-6 h-6 nav-link @(controller.Equals("Summary") && action.Equals("Index") ? "active" : "text-gray-800 transition duration-75 group-hover:text-gray-900")" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
                         <path fill-rule="evenodd" d="M9 7V2.221a2 2 0 0 0-.5.365L4.586 6.5a2 2 0 0 0-.365.5H9Zm2 0V2h7a2 2 0 0 1 2 2v16a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V9h5a2 2 0 0 0 2-2Zm-1 9a1 1 0 1 0-2 0v2a1 1 0 1 0 2 0v-2Zm2-5a1 1 0 0 1 1 1v6a1 1 0 1 1-2 0v-6a1 1 0 0 1 1-1Zm4 4a1 1 0 1 0-2 0v3a1 1 0 1 0 2 0v-3Z" clip-rule="evenodd" />
                     </svg>
