--- a/AUF.EMR.MVC/Views/Shared/Navigations/_HouseholdNav.cshtml
+++ b/AUF.EMR.MVC/Views/Shared/Navigations/_HouseholdNav.cshtml
@@ -36,7 +36,7 @@
                         <a asp-action="UserProfile" asp-controller="User" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Profile</a>
                     </li>
                     <li>
-                        <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Summary</a>
+                        <a asp-action="Index" asp-controller="Summary" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Summary</a>
                     </li>
                     <form asp-area="Identity" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
                         <button type="submit">Logout</button>
