--- a/AUF.EMR.MVC/Views/HouseHold/Index.cshtml
+++ b/AUF.EMR.MVC/Views/HouseHold/Index.cshtml
@@ -17,7 +17,7 @@
         </div>
 
         <p>
-            <a asp-action="Barangay" asp-controller="Dashboard" class="text-green-500">See Barangay Dashboard</a>
+            <a asp-action="Barangay" asp-controller="Dashboard" class="text-green-500 hover:text-green-700">See Barangay Dashboard</a>
         </p>
 
         <form asp-action="Index">
