--- a/AUF.EMR.MVC/Views/Shared/Layouts/_FormLayout.cshtml
+++ b/AUF.EMR.MVC/Views/Shared/Layouts/_FormLayout.cshtml
@@ -11,7 +11,7 @@
     <link href="~/css/style.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-<body class="bg-slate-100">
+<body class="bg-slate-100" id="content">
     <header>
         @await Html.PartialAsync("Navigations/_FormNav");
     </header>
