--- a/AUF.EMR.MVC/Views/User/Index.cshtml
+++ b/AUF.EMR.MVC/Views/User/Index.cshtml
@@ -25,7 +25,7 @@
     <div class="flex justify-between items-center mb-8">
         <div class="flex-1 mr-4 relative">
 
-            <form class="flex items-center w-full mx-auto">
+            <form class="flex items-center w-full mx-auto" asp-action="Index">
                 <label for="voice-search" class="sr-only">Search</label>
                 <div class="relative w-full">
                     <div class="absolute inset-y-0 start-0 flex items-center ps-3 pointer-events-none">
@@ -34,14 +34,13 @@
                         </svg>
 
                     </div>
-                    <input type="text" id="voice-search" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5" placeholder="Search Employee..." required />
+                    <input type="text" name="query" id="search-input" class="border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5" placeholder="Search Employee..." />
                 </div>
                 <!--Search Button-->
                 <button type="submit" class="inline-flex items-center py-2.5 px-3 ms-2 text-sm font-medium text-white bg-blue-700 rounded-lg border border-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
                     <svg class="w-4 h-4 me-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
                         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z" />
                     </svg>
-
                     Search
                 </button>
             </form>
@@ -75,11 +74,11 @@
                         <td class="border-b border-gray-100 px-4 py-2 text-left">@Html.DisplayFor(modelItem => item.Address)</td>
                         <!--Action Button-->
                         <td class="border-b border-gray-100 px-4 py-2 text-left text-lg">
-                            <a asp-action="Edit" asp-route-id="@item.Id" class="text-yellow-300 hover:text-yellow-400 mr-2">
-                                <i class="fas fa-edit"></i>
-                            </a>
                             <a asp-action="Profile" asp-route-id="@item.Id" class="text-green-400 hover:text-green-500 mr-2">
                                 <i class="fas fa-eye"></i>
+                            </a>
+                            <a asp-action="Edit" asp-route-id="@item.Id" class="text-yellow-300 hover:text-yellow-400 mr-2">
+                                <i class="fas fa-edit"></i>
                             </a>
                             <button data-modal-target="popup-modal-2" data-modal-toggle="popup-modal-2" data-member-id="@item.Id" class="delete-btn text-red-400 hover:text-red-500 mr-2"><i class="fas fa-trash"></i></button>
                         </td>
@@ -130,9 +129,3 @@
         });
     });
 </script>
-
-@section Scripts {
-    @{
-        await Html.RenderPartialAsync("Prints/_PrintDialog");
-    }
-}
