Remove profile bug on summary

--- a/AUF.EMR.MVC/Views/Shared/Navigations/_FormSideBar.cshtml
+++ b/AUF.EMR.MVC/Views/Shared/Navigations/_FormSideBar.cshtml
@@ -32,7 +32,7 @@
     <div class="h-full px-3 pb-4 overflow-y-auto bg-white">
         <ul class="space-y-2 font-medium text-sm">
             <li>
-                <a href="#" class="flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100 group">
+                <a asp-action="Index" asp-controller="Household" class="flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100 group">
                     <img src="data:image/jpeg;charset=utf-8;base64,@brgyLogo" class="h-10 me-3" alt="Barangay Logo" />
                     <span class="self-center text-lg font-semibold sm:text-lg whitespace-nowrap">@brgyName</span>
                 </a>
